// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules build-storybook should create valid storybook 1`] = `
SOURCE HTML: 
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Storybook
    </title>
    <style>
      html, body {
    overflow: hidden;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
  }
    </style>
    <script>
      try {
    if (window.parent !== window) {
      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
      window.__VUE_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__VUE_DEVTOOLS_GLOBAL_HOOK__;
    }
  } catch (e) {
    console.warn('unable to connect to parent frame for connecting dev tools');
  }
    </script>
  </head>
  <body>
    <div id="root">
    </div>
    <script src="./sb_dll/storybook_ui_dll.js">
    </script>
    <script src="runtime~main.6ac4c33d73ae9704bbb9.bundle.js">
    </script>
    <script src="vendors~main.8ee6c989c492129708c6.bundle.js">
    </script>
    <script src="main.9e6db395536d80e4abd3.bundle.js">
    </script>
  </body>
</html>

POST HYDRATE DIFFS: 
 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">

`;

exports[`react-css-modules should create valid app 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-aeb0c9cb99d2933bf332.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-2172edec3e4f91420575.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-b65f4e2f3dea30f0a193.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-aeb0c9cb99d2933bf332.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-2172edec3e4f91420575.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-b65f4e2f3dea30f0a193.js"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: 
         <div class="_3YtmnHj lwsthgY"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "index.html": 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-aeb0c9cb99d2933bf332.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-2172edec3e4f91420575.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-b65f4e2f3dea30f0a193.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-aeb0c9cb99d2933bf332.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-2172edec3e4f91420575.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-b65f4e2f3dea30f0a193.js"
    >
    </script>
  </body>
</html>
,
  "main-b65f4e2f3dea30f0a193.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "runtime-aeb0c9cb99d2933bf332.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-2172edec3e4f91420575.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
